@@ -1,32 +1,7 @@
 /*
-   Copyright (C) 1998 National Electronics and Computer Technology Center
-
-   This file is part of ThColl, a Thai string collation library.
-
-   ThColl is free software; you can redistribute it and/or
-   modify it under the terms of the GNU General Public License as
-   published by the Free Software Foundation; either version 2 of
-   the License, or (at your option) any later version.
-
-   ThColl is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-   General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with ThColl; see the file COPYING.  If not, write to the
-   Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-   Boston, MA  02111-1307, USA.
-
-   Any licensing or usage questions should be directed to Theppitak
-   Karoonboonyanan <thep@links.nectec.or.th>.
-
-*/
-
-/*
- * thsort.c - a word list sorting tool based on ThColl
+ * thsort.c - word list sorting routine
  * Created: 26 Nov 1998
- * Author: Theppitak Karoonboonyanan <thep@links.nectec.or.th>
+ * Author: Theppitak Karoonboonyanan <thep@linux.thai.net>
  */
 
 #include <thai/thcoll.h>
